# star-exec-presenter

./: .ghci  .gitignore  .gitmodules  Application.hs  CHANGELOG.md  ErrorID.hs  Foundation.hs  INSTALL.md  Import.hs  Makefile  Model.hs  README.md  TODOs.md  TRACE.md  circle.yml  devel.hs  keter.sh  repl.sh  stack.yaml  stack.yaml.7  stack.yaml.8  star-exec-presenter.cabal  star-exec-presenter.ddump-splices  starexec-connectiontest.hs
ConceptAnalysis/: DotGraph.hs  FCA.hs  FCAPreparation.hs
Control/: Job.hs
FCA/: Basic.hs  DotGraph.hs  Helpers.hs  StarExec.hs  Utils.hs
Handler/: Colors.hs  Combine.hs  CompareJobs.hs  Competition.hs  CompetitionText.hs  CompetitionWithConfig.hs  CompetitionYear.hs  Concepts.hs  Control.hs  DbTest.hs  DisplayHtmlProof.hs  DisplayProof.hs  Error.hs  Eval.hs  FindPrim.hs  FlexibleTable.hs  Flexible_Table.hs  Home.hs  Image.hs  Import.hs  InstallSolvers.hs  LegacyDisplayProof.hs  LegacyListCompetitions.hs  LegacyListHiddenCompetitions.hs  LegacyShowBenchmarkInfo.hs  LegacyShowJobInfo.hs  LegacyShowJobPair.hs  LegacyShowJobResults.hs  LegacyShowManyJobResults.hs  LegacyShowPostProcInfo.hs  LegacyShowSolverInfo.hs  ListBenchmarks.hs  ListCompetitions.hs  ListHiddenCompetitions.hs  ListJobPairs.hs  ListJobs.hs  ListPostProcs.hs  ListProofs.hs  ListSolvers.hs  Participant.hs  (+23 more)
Importer/: Internal.hs  LRI.hs  UIBK.hs
Importer/Interpreter/: LRI.hs  UIBK.hs
Importer/Parser/: LRI.hs  UIBK.hs
Presenter/: Auth.hs  CompetitionResults.hs  DOI.hs  History.hs  Model.hs  Models.hs  Output.hs  PersistHelper.hs  Prelude.hs  Processing.hs  Registration.hs  RouteTypes.hs  STM.hs  Short.hs  Statistics.hs
Presenter/Control/: Job.hs
Presenter/DOI/: Type.hs
Presenter/Internal/: Stringish.hs
Presenter/Model/: Competition.hs  CompetitionResults.hs  Complexity.hs  Complexity2015.hs  Defaults.hs  Entities.hs  PersistInstances.hs  Query.hs  RouteTypes.hs  StarExec.hs  Types.hs
Presenter/Model/Additional/: Table.hs
Presenter/Registration/: Code.hs  Data.hs  Form.hs  Form_2016.hs  Form_2017.hs
Presenter/StarExec/: Commands.hs  Concurrent.hs  Connection.hs  JobData.hs  Space.hs  Urls.hs
Presenter/Utils/: Colors.hs  WidgetMetaRefresh.hs  WidgetTable.hs
Settings/: StaticFiles.hs
StarExec/: Auth.hs  Commands.hs  CompetitionResults.hs  Complexity.hs  Concurrent.hs  Connection.hs  ErrorID.hs  JobData.hs  JobInfo.hs  JobResultInfo.hs  JobResultsTable.hs  JobStatus.hs  Jobs.hs  Persist.hs  PersistTypes.hs  Prims.hs  Processing.hs  Registration.hs  STM.hs  Session.hs  SolverResult.hs  StarExecCommands.hs  Statistics.hs  Types.hs  Urls.hs
StarExec/CompetitionResults/: Type.hs
Table/: Data.hs  Get.hs  Query.hs
Utils/: WidgetMetaRefresh.hs
config/: keter.yml  models  postgresql.yml  routes  settings.yml
data/: 2007.tar.xz
deploy/: Procfile
doc/: Process.md  TODOs.md
messages/: en.msg
src/: Application.hs  Foundation.hs  Import.hs  Model.hs
src/FCA/: Basic.hs  DotGraph.hs  Helpers.hs
src/Handler/: Combine.hs  CompetitionText.hs  CompetitionYear.hs  Concepts.hs  Control.hs  DisplayProof.hs  FlexibleTable.hs  Flexible_Table.hs  LegacyDisplayProof.hs  LegacyShowJobInfo.hs  LegacyShowJobPair.hs  ListBenchmarks.hs  ListHiddenCompetitions.hs  ListPostProcs.hs  ListProofs.hs  Problems.hs  RenderBenchmark.hs  Rerun.hs  ShowBenchmarkInfo.hs  ShowJobInfo.hs  ShowJobPair.hs  ShowManyJobResults.hs  ShowPostProcInfo.hs
src/Importer/: Internal.hs
src/Presenter/: Auth.hs  CompetitionResults.hs  DOI.hs  History.hs  Model.hs  Output.hs  PersistHelper.hs  Processing.hs  Registration.hs  STM.hs  Statistics.hs
src/Presenter/Control/: Job.hs
src/Presenter/DOI/: Type.hs
src/Presenter/Model/: Competition.hs  Complexity.hs  PersistInstances.hs  Query.hs  StarExec.hs
src/Presenter/Model/Additional/: Table.hs
src/Presenter/Registration/: Code.hs  Data.hs  Form_2015.hs  Form_2018.hs
src/Presenter/StarExec/: Commands.hs  Connection.hs  Urls.hs
src/Presenter/Utils/: Colors.hs  WidgetTable.hs
src/Table/: Get.hs
static/xsl/: cpfHTML.xsl
templates/: combine.lucius  compare_jobs.hamlet  competition.hamlet  competition_slim.hamlet  competition_slim.lucius  competition_slim2.hamlet  competition_slim2.lucius  concepts.hamlet  concepts_attributes.hamlet  control.hamlet  default-layout-wrapper.hamlet  eval.hamlet  find_prim.hamlet  homepage.hamlet  import.hamlet  list_benchmarks.hamlet  list_competitions.hamlet  list_job_pairs.hamlet  list_jobs.hamlet  list_post_procs.hamlet  list_proofs.hamlet  list_solvers.hamlet  lri_show_benchmark_info.hamlet  lri_show_job_info.hamlet  lri_show_solver_info.hamlet  registered.hamlet  registered.lucius  se_show_benchmark_info.hamlet  se_show_job_info.hamlet  se_show_job_pair.hamlet  se_show_solver_info.hamlet  search_prim.hamlet  show_benchmark_info.hamlet  show_job_info.hamlet  show_job_info.lucius  show_job_pair.hamlet  show_job_results.hamlet  show_job_results.lucius  show_many_job_results.hamlet  show_post_proc_info.hamlet  (+4 more)
tests/: HomeTest.hs
