name:              star-exec-presenter
version:           0.1.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Control
                     Handler.ListHiddenCompetitions
                     Handler.ListCompetitions
                     Handler.Registered
                     Handler.ShowJobPair
                     Handler.LegacyShowJobPair
                     Handler.DisplayProof
                     Handler.LegacyDisplayProof
                     Handler.ShowJobInfo
                     Handler.LegacyShowJobInfo
                     Handler.ShowBenchmarkInfo
                     Handler.LegacyShowBenchmarkInfo
                     Handler.ShowSolverInfo
                     Handler.LegacyShowSolverInfo
                     Handler.ShowPostProcInfo
                     Handler.LegacyShowPostProcInfo
                     Handler.ShowManyJobResults
                     Handler.LegacyShowManyJobResults
                     Handler.LegacyShowJobResults
                     Handler.FlexibleTable
                     Handler.Competition
                     Handler.CompetitionWithConfig
                     Presenter.Auth
                     Presenter.Internal.Stringish
                     Presenter.Model.Additional.Table
                     Presenter.Model.Competition
                     Presenter.Model.CompetitionResults
                     Presenter.Model.Complexity
                     Presenter.Model.Defaults
                     Presenter.Model.Entities
                     Presenter.Model.PersistInstances
                     Presenter.Model.Query
                     Presenter.Model.RouteTypes
                     Presenter.Model.StarExec
                     Presenter.Model.Types
                     Presenter.Model
                     Presenter.PersistHelper
                     Presenter.Prelude
                     Presenter.Processing
                     Presenter.Registration
                     Presenter.StarExec.Commands
                     Presenter.StarExec.Concurrent
                     Presenter.StarExec.Connection
                     Presenter.StarExec.JobData
                     Presenter.StarExec.Urls
                     Presenter.Statistics
                     Presenter.Utils.WidgetMetaRefresh
                     Presenter.Utils.WidgetTable

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-postgresql         >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , transformers
                 , exceptions
                 , resourcet
                 , stringsearch
                 , http-client
                 , http-types
                 , xml-conduit
                 , zip-archive
                 , zlib
                 , tar
                 , vector
                 , cassava
                 , double-conversion
                 , blaze-markup
                 , containers
                 , html-conduit
                 , time
                 -- , wl-pprint-text
                 , wl-pprint
                 , parsec
                 , blaze-html
                 , xml-hamlet
                 , case-insensitive
                 , http-client
                 , random
                 , tagsoup
                 -- , esqueleto
                 -- , lifted-base
                 , hashable
                 , stm
                 , SafeSemaphore
                 , MonadCatchIO-transformers

executable         star-exec-presenter
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , star-exec-presenter
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , star-exec-presenter
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , containers
                 , html-conduit
                 , time
