name:              star-exec-presenter
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Error
                     Handler.ShowJobPair
                     Handler.ShowManyJobResults
                     Handler.Flexible_Table
                     Handler.Competition
                     Handler.CompetitionWithConfig
                     Handler.Registered
                     Handler.Control
                     Handler.ShowJobInfo
                     Handler.ShowBenchmarkInfo
                     Handler.ShowSolverInfo
                     Handler.ListCompetitions
                     Handler.DisplayProof
                     Handler.ListHiddenCompetitions
                     Handler.ShowPostProcInfo
                     StarExec.Commands
                     StarExec.Connection
                     StarExec.Types
                     StarExec.Persist
                     StarExec.Urls
                     StarExec.JobData
                     StarExec.CompetitionResults
                     StarExec.CompetitionResults.Type
                     StarExec.Registration
                     StarExec.PersistTypes
                     StarExec.Complexity
                     StarExec.Concurrent
                     StarExec.Processing
                     StarExec.Auth
                     StarExec.Statistics
                     StarExec.STM
                     Table.Data
                     Table.Get
                     Table.Query
                     Control.Job
                     Utils.WidgetMetaRefresh

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
		
    build-depends: base                  
                 , yesod                 
                 , yesod-core            
                 , yesod-auth            
                 , yesod-static          
                 , yesod-form            
                 , bytestring            
                 , text                  
                 , persistent            
                 , persistent-postgresql 
                 , persistent-template   
                 , template-haskell
                 , shakespeare           
                 , hjsmin                
                 , monad-control         
                 , wai-extra             
                 , yaml                  
                 , http-conduit          
                 , directory             
                 , warp                  
                 , data-default
                 , aeson                 
                 , conduit               
                 , monad-logger          
                 , fast-logger           
                 , wai-logger            
                 , transformers
                 , exceptions
                 , resourcet
                 , stringsearch
                 , http-client
                 , http-types
                 , xml-conduit
                 , zip-archive
                 , zlib
                 , vector
                 , cassava
                 , double-conversion
                 , blaze-markup
                 , containers
                 , html-conduit
                 , time
                 -- , wl-pprint-text
                 , wl-pprint
                 , parsec
                 , blaze-html
                 , xml-hamlet
                 , case-insensitive
                 , http-client
                 , random
                 , tagsoup
                 -- , esqueleto
                 -- , lifted-base
                 , hashable
                 , stm
                 , SafeSemaphore
                 , MonadCatchIO-transformers
                 , fgl, graphviz , process 

executable         star-exec-presenter
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , star-exec-presenter
                     , yesod

    ghc-options:       -threaded -O2

-- executable         star-exec-controller
--     if flag(library-only)
--         Buildable: False
-- 
--     main-is:           Control/Job.hs
--     hs-source-dirs:    . app
--     build-depends:     base
--                      , star-exec-presenter
--                      , yesod
--                      , parsec, text, blaze-markup, http-conduit, cassava, wl-pprint
--                      , time, blaze-html, containers, shakespeare
--                      , xml-conduit, xml-hamlet, hashable
-- 
--     ghc-options:       -threaded -O2
-- 
--     extensions: TemplateHaskell
--                 QuasiQuotes
--                 OverloadedStrings
--                 NoImplicitPrelude
--                 CPP
--                 MultiParamTypeClasses
--                 TypeFamilies
--                 GADTs
--                 GeneralizedNewtypeDeriving
--                 FlexibleContexts
--                 EmptyDataDecls
--                 NoMonomorphismRestriction
--                 DeriveDataTypeable

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , star-exec-presenter
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , hspec
                 , transformers
                 , containers
                 , html-conduit
                 , time
