name:              star-exec-presenter
version:           0.2.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Control
                     Handler.ListHiddenCompetitions
                     Handler.ListCompetitions
                     Handler.Registered
                     Handler.ShowJobPair
                     Handler.LegacyShowJobPair
                     Handler.DisplayProof
                     Handler.LegacyDisplayProof
                     Handler.ShowJobInfo
                     Handler.LegacyShowJobInfo
                     Handler.ShowBenchmarkInfo
                     Handler.LegacyShowBenchmarkInfo
                     Handler.ShowSolverInfo
                     Handler.LegacyShowSolverInfo
                     Handler.ShowPostProcInfo
                     Handler.LegacyShowPostProcInfo
                     Handler.ShowManyJobResults
                     Handler.LegacyShowManyJobResults
                     Handler.LegacyShowJobResults
                     Handler.FlexibleTable
                     Handler.Competition
                     Handler.CompetitionWithConfig
                     Handler.Import
                     Handler.ListJobPairs
                     Handler.ListProofs
                     Handler.ListJobs
                     Handler.ListBenchmarks
                     Handler.ListSolvers
                     Handler.ListPostProcs
                     Handler.LegacyListCompetitions
                     Handler.LegacyListHiddenCompetitions
                     Presenter.Auth
                     Presenter.CompetitionResults
                     Presenter.Control.Job
                     Presenter.Internal.Stringish
                     Presenter.Model.Additional.Table
                     Presenter.Model.Competition
                     Presenter.Model.CompetitionResults
                     Presenter.Model.Complexity
                     Presenter.Model.Defaults
                     Presenter.Model.Entities
                     Presenter.Model.PersistInstances
                     Presenter.Model.Query
                     Presenter.Model.RouteTypes
                     Presenter.Model.StarExec
                     Presenter.Model.Types
                     Presenter.Model
                     Presenter.PersistHelper
                     Presenter.Prelude
                     Presenter.Processing
                     Presenter.Registration
                     Presenter.StarExec.Commands
                     Presenter.StarExec.Concurrent
                     Presenter.StarExec.Connection
                     Presenter.StarExec.JobData
                     Presenter.StarExec.Urls
                     Presenter.Statistics
                     Presenter.STM
                     Presenter.Utils.Colors
                     Presenter.Utils.WidgetMetaRefresh
                     Presenter.Utils.WidgetTable
                     Importer.Parser.LRI
                     Importer.Interpreter.LRI
                     Importer.Internal
                     Importer.LRI
                     Importer.Parser.UIBK
                     Importer.Interpreter.UIBK
                     Importer.UIBK

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , transformers
                 , exceptions
                 , resourcet
                 , stringsearch
                 , http-client
                 , http-types
                 , xml-conduit
                 , zip-archive
                 , zlib
                 , tar
                 , vector
                 , cassava
                 , double-conversion
                 , blaze-markup
                 , containers
                 , html-conduit
                 , time
                 -- , wl-pprint-text
                 , wl-pprint
                 , parsec
                 , blaze-html
                 , xml-hamlet
                 , case-insensitive
                 , http-client
                 , random
                 , tagsoup
                 -- , esqueleto
                 -- , lifted-base
                 , hashable
                 , stm
                 , SafeSemaphore
                 , MonadCatchIO-transformers
                 , conduit-extra
                 , fgl
                 , graphviz
                 , process

executable         star-exec-presenter
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , star-exec-presenter
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , star-exec-presenter
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , containers
                 , html-conduit
                 , time
